# vtr-verilog-to-routing

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  vpr-customized_binary_heap.dot  vpr-customized_four_ary_heap.dot  vpr-stl_binary_heap.dot  vpr.dot
.github/workflows/: nightly_test_manual.yml
dev/vtr_test_suite_verifier/: verify_test_suites.py
libs/libarchfpga/src/: physical_types.h
libs/libvtrutil/src/: vtr_assert.cpp
utils/fasm/test/: test_fasm.cpp  wire.net.post_routing
vpr/: CMakeLists.txt
vpr/src/: CMakeLists.txt
vpr/src/analysis/: CMakeLists.txt
vpr/src/analytical_place/: analytical_placement_flow.cpp  analytical_solver.cpp  analytical_solver.h  ap_clusterer.cpp  ap_clusterer.h  flat_placement_bins.h  flat_placement_density_manager.cpp  flat_placement_density_manager.h  flat_placement_mass_calculator.cpp  full_legalizer.cpp  full_legalizer.h  global_placer.cpp  global_placer.h  partial_legalizer.cpp  partial_legalizer.h  partial_placement.cpp  primitive_dim_manager.h  primitive_vector.h
vpr/src/base/: CMakeLists.txt  CheckSetup.cpp  SetupVPR.cpp  ShowSetup.cpp  read_options.cpp  read_options.h  vpr_api.cpp  vpr_types.h
vpr/src/draw/: CMakeLists.txt  draw.cpp
vpr/src/noc/: CMakeLists.txt
vpr/src/pack/: CMakeLists.txt  appack_context.h  appack_max_dist_th_manager.cpp  appack_max_dist_th_manager.h  cluster_legalizer.cpp  cluster_legalizer.h  cluster_placement.cpp  cluster_placement.h  greedy_candidate_selector.cpp  greedy_candidate_selector.h  greedy_clusterer.cpp  pack.cpp
vpr/src/place/: CMakeLists.txt  initial_placement.cpp  initial_placement.h  place.cpp  place_util.cpp  place_util.h  placer.cpp  timing_place_lookup.cpp
vpr/src/place/analytical_placement/: AnalyticalSolver.cpp  AnalyticalSolver.h  PartialPlacement.cpp  PlacementLegalizer.cpp  PlacementLegalizer.h  analytical_placement_flow.cpp  analytical_placement_flow.h  ap_prepacker.cpp  ap_prepacker.h  full_legalizer.cpp  full_legalizer.h  read_atom_netlist.cpp  read_atom_netlist.h
vpr/src/power/: CMakeLists.txt
vpr/src/route/: CMakeLists.txt  SerialNetlistRouter.h  SerialNetlistRouter.tpp  binary_heap.cpp  binary_heap.h  connection_router.cpp  connection_router.h  connection_router.tpp  connection_router_interface.h  d_ary_heap.hpp  heap_type.cpp  heap_type.h  k_ary_heap.h  multi_queue_priority_queue.cpp  multi_queue_priority_queue.h  onetbb_priority_queue.h  parallel_connection_router.cpp  parallel_connection_router.h  route.cpp  route_common.cpp  route_common.h  route_net.cpp  route_net.tpp  route_path_manager.cpp  route_path_manager.h  route_tree.cpp  route_utils.cpp  router_delay_profiling.cpp  router_lookahead_map.cpp
vpr/src/timing/: CMakeLists.txt  PreClusterDelayCalculator.h  PreClusterTimingManager.h
vpr/src/util/: CMakeLists.txt  vpr_utils.cpp
vpr/test/: report_timing.hold.rpt  report_timing.setup.rpt  test_post_verilog_i_gnd_o_unconnected.out.v  test_post_verilog_i_nets_o_unconnected.out.v  test_post_verilog_i_unconnected_o_nets.out.v  test_post_verilog_i_unconnected_o_unconnected.out.v  test_post_verilog_i_vcc_o_unconnected.out.v  unconnected.net.post_routing  unconnected_post_synthesis.blif  unconnected_post_synthesis.sdf
vtr_flow/arch/COFFE_22nm/: k6FracN10LB_mem20K_complexDSP_customSB_22nm.xml
vtr_flow/arch/timing/fixed_size/: fixed_k6_frac_N8_22nm.xml
vtr_flow/parse/qor_config/: qor_ap_fixed_chan_width.txt  qor_fg_parallel_router_fixed_chan_width.txt
vtr_flow/tasks/regression_tests/vtr_reg_strong/basic_ap/diffeq1/config/: golden_results.txt
